# sub0_echomint

./: LICENSE  MILESTONE-2-PLAN.md  PITCH_DECK.md  README.md  docker-compose.yml
arkiv-indexer/: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  package.json  start.sh
arkiv-indexer/src/: index.ts
arkiv-indexer/src/analyzers/: moodCalculator.ts  sentimentAnalyzer.ts
arkiv-indexer/src/indexers/: marketDataIndexer.ts
arkiv-indexer/src/utils/: hyperbridgeClient.ts
contracts/: .env.example  .gitignore  Cargo.toml  README.md  deploy.sh  networks.json
contracts/echomint_nft/: .gitignore  README.md  build.sh  deploy.sh
contracts/echomint_nft/src/: lib.rs
contracts/src/: lib.rs
frontend/: .env.example  THEME_CUSTOMIZATION.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/app/: app.css  polyfills.ts  root.tsx  routes.ts
frontend/app/components/: AnimatedBackground.tsx  Dashboard.tsx  Header.tsx  MarketDataCard.tsx  MarketMetrics.tsx  NFTDisplay.tsx
frontend/app/components/ui/: badge.tsx  card.tsx
frontend/app/config/: networks.ts  theme.ts
frontend/app/contracts/: echomint_nft.json
frontend/app/lib/: ai-image.ts  arkiv.ts  contract.ts  pinata.ts  wallet.ts
frontend/app/routes/: about.tsx  gallery.tsx  home.tsx
frontend/app/routes/api/: README.md  generate-image.ts  health.ts  market-data.ts
