[package]
name = "echomint_nft"
version = "0.1.0"
authors = ["EchoMint Team"]
edition = "2021"

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "6.0.0-beta.1"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.release]
overflow-checks = false
opt-level = "z"
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = "z"
